Card Groups page added!

--- a/organisms/card-groups/card-groups.html
+++ b/organisms/card-groups/card-groups.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Organisms | Delta Design System</title>
+    <title>Card Groups | Delta Design System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ovo|Montserrat:400,700&display=swap" rel="stylesheet">
-    <link href="../css/master.css" rel="stylesheet">
+    <link href="../../css/master.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Header</h1>
       <div class="logo">
-        <a href="../index.html">
+        <a href="../../index.html">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon id="right-side" class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon id="left-side" class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
         </a>
       </div>
@@ -23,12 +23,12 @@
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
         </button>
         <ul>
-          <li><a href="../index.html">Overview</a></li>
-          <li><a href="../atoms/atoms.html">Atoms</a></li>
-          <li><a href="../molecules/molecules.html">Molecules</a></li>
-          <li>Organisms</li>
-          <li><a href="../style/style.html">Style</a></li>
-          <li><a href="../downloads/downloads.html">Downloads</a></li>
+          <li><a href="../../index.html">Overview</a></li>
+          <li><a href="../../atoms/atoms.html">Atoms</a></li>
+          <li><a href="../../molecules/molecules.html">Molecules</a></li>
+          <li><a href="../../organisms/organisms.html">Organisms</a></li>
+          <li><a href="../../style/style.html">Style</a></li>
+          <li><a href="../../downloads/downloads.html">Downloads</a></li>
         </ul>
       </nav>
     </header>
@@ -36,42 +36,41 @@
       <article>
         <section class="row wide">
           <div class="column">
-            <h1 class="title">Organisms</h1>
-            <p>Organisms are relatively complex UI components composed of groups of molecules and/or atoms and/or other organisms. These organisms form distinct sections of an interface.</p>
-            <p><cite><a href="http://atomicdesign.bradfrost.com/chapter-2/#organisms">Organisms</a> from <a href="http://atomicdesign.bradfrost.com/" target="_blank">Atomic Design</a> by <a href="https://bradfrost.com" target="_blank">Brad Frost</a></cite></p>
+            <h1 class="title">Card Groups</h1>
+            <p>We like to use cards and card groups to quickly preview related content. It's a great way to make content more discoverable.</p>
           </div>
         </section>
         <section class="row wide">
-          <h2>Delta Design System Organisms</h2>
+          <h1>Apollo 11 Crew Members</h1>
           <div class="card-row">
             <div class="card">
+              <figure>
+                <img src="../../assets/images/nasa-neil-armstrong-2x.jpg" srcset="../../assets/images/nasa-neil-armstrong-1x.jpg 1x, ../../assets/images/nasa-neil-armstrong-2x.jpg 2x" alt="Portrait of Commander Neil Armstrong">
+              </figure>
               <div class="text">
-                <h3>Card Groups</h3>
-                <p class="icon"><a href="card-groups/card-groups.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
+                <h2>Commander Neil Armstrong</h2>
+                <p>Neil Alden Armstrong  (1930-2012) was born on 5 August 1930 on his grandparents' farm near Wapakoneta, Ohio, to Stephen and Viola Armstrong.</p>
+                <p class="icon"><a href="https://history.nasa.gov/ap11ann/astrobios.htm#Armstrong" target="_blank">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
             </div>
             <div class="card">
+              <figure>
+                <img src="../../assets/images/nasa-michael-collins-2x.jpg" srcset="../../assets/images/nasa-michael-collins-1x.jpg 1x, ../../assets/images/nasa-michael-collins-2x.jpg 2x" alt="Portrait of Command Module Pilot Michael Collins">
+              </figure>
               <div class="text">
-                <h3>Footers</h3>
-                <p class="icon"><a href="footers/footers.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
+                <h2>Command Module Pilot Michael Collins</h2>
+                <p>Michael Collins (1930- ) was born on October 30, 1930, in Rome, Italy. He later moved to Washington, D.C., where he graduated from St. Albans School.</p>
+                <p class="icon"><a href="https://history.nasa.gov/ap11ann/astrobios.htm#Collins" target="_blank">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
             </div>
             <div class="card">
+              <figure>
+                <img src="../../assets/images/nasa-buzz-aldrin-2x.jpg" srcset="../../assets/images/nasa-buzz-aldrin-1x.jpg 1x, ../../assets/images/nasa-buzz-aldrin-2x.jpg 2x" alt="Portrait of Lunar Module Pilot Edwin Aldrin">
+              </figure>
               <div class="text">
-                <h3>Forms</h3>
-                <p>Coming soon</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Headers</h3>
-                <p class="icon"><a href="headers/headers.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Media Grid Blocks</h3>
-                <p>Coming soon</p>
+                <h2>Lunar Module Pilot Edwin &#8220;Buzz&#8221; Aldrin</h2>
+                <p>Edwin E. Aldrin, Jr. (1930- ) was born in Montclair, New Jersey, on 20 January 1930. He attended the U.S. Military Academy at West Point, entered the United States Air Force, and received pilot training in 1951.</p>
+                <p class="icon"><a href="https://history.nasa.gov/ap11ann/astrobios.htm#Buzz" target="_blank">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
             </div>
           </div>
@@ -83,12 +82,12 @@
       <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
           <ul>
-            <li><a href="../index.html">Overview</a></li>
-            <li><a href="../atoms/atoms.html">Atoms</a></li>
-            <li><a href="../molecules/molecules.html">Molecules</a></li>
-            <li>Organisms</li>
-            <li><a href="../style/style.html">Style</a></li>
-            <li><a href="../downloads/downloads.html">Downloads</a></li>
+            <li><a href="../../index.html">Overview</a></li>
+            <li><a href="../../atoms/atoms.html">Atoms</a></li>
+            <li><a href="../../molecules/molecules.html">Molecules</a></li>
+            <li><a href="../../organisms/organisms.html">Organisms</a></li>
+            <li><a href="../../style/style.html">Style</a></li>
+            <li><a href="../../downloads/downloads.html">Downloads</a></li>
           </ul>
         </nav>
         <section class="meta-content column">
@@ -109,7 +108,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="https://unpkg.com/headroom.js@0.9.4/dist/headroom.js"></script>
-    <script src="../assets/scripts/site.js"></script>
+    <script src="../../assets/scripts/site.js"></script>
     <script>
       var myElement = document.querySelector('header');
       var headroom  = new Headroom(myElement);
