Card Groups and Media Block Grid pages added
Added 'figcaption' to card images; updated figcaption css rules for cards and media grid items

--- a/downloads/downloads.html
+++ b/downloads/downloads.html
@@ -39,7 +39,7 @@
             <h1 class="title">Downloads</h1>
             <p>Here are some additional things that help to complete a full design system kit.</p>
           </div>
-          <div class="card-row">
+          <div class="card-group">
             <div class="card">
               <div class="text">
                 <h3>Sketch</h3>
