--- a/molecules/cards/cards.html
+++ b/molecules/cards/cards.html
@@ -48,69 +48,54 @@
         </section>
         <section class="row wide">
           <h1>Card Examples</h1>
-          <h2>Basic Text Cards</h2>
-          <div class="card-row">
+          <div class="card-group">
             <div class="card">
               <div class="text">
-                <h3>Card Headline</h3>
+                <h2>Basic Card</h2>
                 <p>Cards are very good at conveying small bits of information, and cards are convenient because they require little markup to use effectively.</p>
                 <p class="icon"><a href="#!">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
             </div>
-<!--
-            <div class="card">
-              <div class="text">
-                <h3>Card Headline</h3>
-                <p>Cards are very good at conveying small bits of information.</p>
-                <p><a href="#!">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Card Headline</h3>
-                <p>Cards are convenient because they require little markup to use effectively.</p>
-                <p><a href="#!">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
--->
           </div>
-        </section>
-        <section class="row wide">
-          <h2>Picture Cards</h2>
-          <div class="card-row">
+          <div class="card-group">
             <div class="card">
               <figure>
                 <img src="../../assets/images/field-2x.jpg" srcset="../../assets/images/field-1x.jpg 1x, ../../assets/images/field-2x.jpg 2x" alt="Example of image used in card layout">
+                <figcaption><cite>Photo: <a href="https://www.stockio.com/free-photo/field-konrad-marx" target="_blank">Field</a> by Konrad Marx</cite></figcaption>
               </figure>
               <div class="text">
-                <h3>Card Headline</h3>
+                <h2>Picture Card</h2>
                 <p>Cards are very good at conveying small bits of information, and cards are convenient because they require little markup to use effectively.</p>
-                <p><cite>Photo: <a href="https://www.stockio.com/free-photo/field-konrad-marx" target="_blank">Field</a> by Konrad Marx</cite></p>
                 <p class="icon"><a href="#!">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
             </div>
-<!--
-            <div class="card">
+          </div>
+          <div class="row wide">
+            <div class="column">
               <figure>
-                <img src="../../assets/images/sea-2x.jpg" srcset="../../assets/images/sea-1x.jpg 1x, ../../assets/images/sea-2x.jpg 2x" alt="Example of image used in card layout">
+                <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;card&quot;&gt;
+  &lt;div class=&quot;text&quot;&gt;
+    &lt;h2&gt;Basic Card&lt;/h2&gt;
+    &lt;p&gt;Cards are very good at conveying small bits of information, and cards are convenient because they require little markup to use effectively.&lt;/p&gt;
+    &lt;p class=&quot;icon&quot;&gt;&lt;a href=&quot;#!&quot;&gt;Learn more&lt;span&gt;&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z&quot;/&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre>
               </figure>
-              <div class="text">
-                <h3>Card Headline</h3>
-                <p>Cards are very good at conveying small bits of information.</p>
-                <p><a href="#!">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-            <div class="card">
               <figure>
-                <img src="../../assets/images/bridge-2x.jpg" srcset="../../assets/images/bridge-1x.jpg 1x, ../../assets/images/bridge-2x.jpg 2x" alt="Example of image used in card layout">
+<pre><code>&lt;div class=&quot;card&quot;&gt;
+  &lt;figure&gt;
+    &lt;img src=&quot;../../assets/images/field-2x.jpg&quot; srcset=&quot;../../assets/images/field-1x.jpg 1x, ../../assets/images/field-2x.jpg 2x&quot; alt=&quot;Example of image used in card layout&quot;&gt;
+    &lt;figcaption&gt;&lt;cite&gt;Photo: &lt;a href=&quot;https://www.stockio.com/free-photo/field-konrad-marx&quot; target=&quot;_blank&quot;&gt;Field&lt;/a&gt; by Konrad Marx&lt;/cite&gt;&lt;/figcaption&gt;
+  &lt;/figure&gt;
+  &lt;div class=&quot;text&quot;&gt;
+    &lt;h2&gt;Picture Card&lt;/h2&gt;
+    &lt;p&gt;Cards are very good at conveying small bits of information, and cards are convenient because they require little markup to use effectively.&lt;/p&gt;
+    &lt;p class=&quot;icon&quot;&gt;&lt;a href=&quot;#!&quot;&gt;Learn more&lt;span&gt;&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z&quot;/&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre>
               </figure>
-              <div class="text">
-                <h3>Card Headline</h3>
-                <p>Cards are convenient because they require little markup to use effectively.</p>
-                <p><a href="#!">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
             </div>
--->
           </div>
         </section>
       </article>
