--- a/style/style.html
+++ b/style/style.html
@@ -42,7 +42,7 @@
         </section>
         <section class="row wide">
           <h2>Delta Design System Style</h2>
-          <div class="card-row">
+          <div class="card-group">
             <div class="card">
               <div class="text">
                 <h3>Colors</h3>
