--- a/atoms/atoms.html
+++ b/atoms/atoms.html
@@ -43,7 +43,7 @@
         </section>
         <section class="row wide">
           <h2>Delta Design System Atoms</h2>
-          <div class="card-row">
+          <div class="card-group">
             <div class="card">
               <div class="text">
                 <h3>Buttons</h3>
