--- a/molecules/media-grid-items/media-grid-items.html
+++ b/molecules/media-grid-items/media-grid-items.html
@@ -48,27 +48,34 @@
         </section>
         <section class="row wide">
           <div class="media-grid-block">
-            <div class="media-grid-item">
+            <div class="media-grid-item" style="padding: 0 1rem 1rem;">
               <figure>
                 <img src="../../assets/images/bratislava-2x.jpg" srcset="../../assets/images/bratislava-1x.jpg 1x, ../../assets/images/bratislava-2x.jpg 2x" alt="Example of image used in media grid item layout">
+              <figcaption><cite>Photo: <a href="https://www.stockio.com/free-photo/bratislava-2" target="_blank">Bratislava</a> by David Cohen</cite></figcaption>
               </figure>
               <div class="text">
                 <h2>Media Grid Item Headline</h2>
                 <p>The difference between menu grid items and cards is that media grid items stretch the entire width of their parent.</p>
-                <p><cite>Photo: <a href="https://www.stockio.com/free-photo/bratislava-2" target="_blank">Bratislava</a> by David Cohen</cite></p>
                 <p class="icon"><a href="#!">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
             </div>
-            <div class="media-grid-item reverse">
+          </div>
+          <div class="row wide">
+            <div class="column">
               <figure>
-                <img src="../../assets/images/building-2x.jpg" srcset="../../assets/images/building-1x.jpg 1x, ../../assets/images/building-2x.jpg 2x" alt="Example of image used in media grid item layout">
+                <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;media-grid-item&quot;&gt;
+  &lt;figure&gt;
+    &lt;img src=&quot;../../assets/images/bratislava-2x.jpg&quot; srcset=&quot;../../assets/images/bratislava-1x.jpg 1x, ../../assets/images/bratislava-2x.jpg 2x&quot; alt=&quot;Example of image used in media grid item layout&quot;&gt;
+  &lt;figcaption&gt;&lt;cite&gt;Photo: &lt;a href=&quot;https://www.stockio.com/free-photo/bratislava-2&quot; target=&quot;_blank&quot;&gt;Bratislava&lt;/a&gt; by David Cohen&lt;/cite&gt;&lt;/figcaption&gt;
+  &lt;/figure&gt;
+  &lt;div class=&quot;text&quot;&gt;
+    &lt;h2&gt;Media Grid Item Headline&lt;/h2&gt;
+    &lt;p&gt;The difference between menu grid items and cards is that media grid items stretch the entire width of their parent.&lt;/p&gt;
+    &lt;p class=&quot;icon&quot;&gt;&lt;a href=&quot;#!&quot;&gt;Learn more&lt;span&gt;&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z&quot;/&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre>
               </figure>
-              <div class="text">
-                <h2>Media Grid Item Headline</h2>
-                <p>Menu grid items also unpack themselves horizontally on screens wider than 48rem. Cards remain stacked vertically.</p>
-                <p><cite>Photo: <a href="https://www.stockio.com/free-photo/building-coen-van" target="_blank">Building</a> by Coen Van</cite></p>
-                <p class="icon"><a href="#!">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
             </div>
           </div>
         </section>
