--- a/organisms/card-groups/card-groups.html
+++ b/organisms/card-groups/card-groups.html
@@ -42,10 +42,11 @@
         </section>
         <section class="row wide">
           <h1>Apollo 11 Crew Members</h1>
-          <div class="card-row">
+          <div class="card-group">
             <div class="card">
               <figure>
                 <img src="../../assets/images/nasa-neil-armstrong-2x.jpg" srcset="../../assets/images/nasa-neil-armstrong-1x.jpg 1x, ../../assets/images/nasa-neil-armstrong-2x.jpg 2x" alt="Portrait of Commander Neil Armstrong">
+              <figcaption><cite>Photo: <a href="https://images.nasa.gov/details-9018112" target="_blank">Astronaut Neil Armstrong</a> from NASA</cite></figcaption>
               </figure>
               <div class="text">
                 <h2>Commander Neil Armstrong</h2>
@@ -56,6 +57,7 @@
             <div class="card">
               <figure>
                 <img src="../../assets/images/nasa-michael-collins-2x.jpg" srcset="../../assets/images/nasa-michael-collins-1x.jpg 1x, ../../assets/images/nasa-michael-collins-2x.jpg 2x" alt="Portrait of Command Module Pilot Michael Collins">
+              <figcaption><cite>Photo: <a href="https://images.nasa.gov/details-S69-31742" target="_blank">Astronaut Michael Collins</a> from NASA</cite></figcaption>
               </figure>
               <div class="text">
                 <h2>Command Module Pilot Michael Collins</h2>
@@ -66,6 +68,7 @@
             <div class="card">
               <figure>
                 <img src="../../assets/images/nasa-buzz-aldrin-2x.jpg" srcset="../../assets/images/nasa-buzz-aldrin-1x.jpg 1x, ../../assets/images/nasa-buzz-aldrin-2x.jpg 2x" alt="Portrait of Lunar Module Pilot Edwin Aldrin">
+              <figcaption><cite>Photo: <a href="https://images.nasa.gov/details-S69-31743" target="_blank">Astronaut Edwin E. Aldrin Jr.</a> from NASA</cite></figcaption>
               </figure>
               <div class="text">
                 <h2>Lunar Module Pilot Edwin &#8220;Buzz&#8221; Aldrin</h2>
@@ -73,6 +76,48 @@
                 <p class="icon"><a href="https://history.nasa.gov/ap11ann/astrobios.htm#Buzz" target="_blank">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
             </div>
+          </div>
+        </section>
+        <section class="row wide">
+          <div class="column">
+            <figure>
+              <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;card-group&quot;&gt;
+  &lt;div class=&quot;card&quot;&gt;
+    &lt;figure&gt;
+      &lt;img src=&quot;../../assets/images/nasa-neil-armstrong-2x.jpg&quot; srcset=&quot;../../assets/images/nasa-neil-armstrong-1x.jpg 1x, ../../assets/images/nasa-neil-armstrong-2x.jpg 2x&quot; alt=&quot;Portrait of Commander Neil Armstrong&quot;&gt;
+    &lt;figcaption&gt;&lt;cite&gt;Photo: &lt;a href=&quot;https://images.nasa.gov/details-9018112&quot; target=&quot;_blank&quot;&gt;Astronaut Neil Armstrong&lt;/a&gt; from NASA&lt;/cite&gt;&lt;/figcaption&gt;
+    &lt;/figure&gt;
+    &lt;div class=&quot;text&quot;&gt;
+      &lt;h2&gt;Commander Neil Armstrong&lt;/h2&gt;
+      &lt;p&gt;Neil Alden Armstrong  (1930-2012) was born on 5 August 1930 on his grandparents' farm near Wapakoneta, Ohio, to Stephen and Viola Armstrong.&lt;/p&gt;
+      &lt;p class=&quot;icon&quot;&gt;&lt;a href=&quot;https://history.nasa.gov/ap11ann/astrobios.htm#Armstrong&quot; target=&quot;_blank&quot;&gt;Learn more&lt;span&gt;&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z&quot;/&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;card&quot;&gt;
+    &lt;figure&gt;
+      &lt;img src=&quot;../../assets/images/nasa-michael-collins-2x.jpg&quot; srcset=&quot;../../assets/images/nasa-michael-collins-1x.jpg 1x, ../../assets/images/nasa-michael-collins-2x.jpg 2x&quot; alt=&quot;Portrait of Command Module Pilot Michael Collins&quot;&gt;
+    &lt;figcaption&gt;&lt;cite&gt;Photo: &lt;a href=&quot;https://images.nasa.gov/details-S69-31742&quot; target=&quot;_blank&quot;&gt;Astronaut Michael Collins&lt;/a&gt; from NASA&lt;/cite&gt;&lt;/figcaption&gt;
+    &lt;/figure&gt;
+    &lt;div class=&quot;text&quot;&gt;
+      &lt;h2&gt;Command Module Pilot Michael Collins&lt;/h2&gt;
+      &lt;p&gt;Michael Collins (1930- ) was born on October 30, 1930, in Rome, Italy. He later moved to Washington, D.C., where he graduated from St. Albans School.&lt;/p&gt;
+      &lt;p class=&quot;icon&quot;&gt;&lt;a href=&quot;https://history.nasa.gov/ap11ann/astrobios.htm#Collins&quot; target=&quot;_blank&quot;&gt;Learn more&lt;span&gt;&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z&quot;/&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;card&quot;&gt;
+    &lt;figure&gt;
+      &lt;img src=&quot;../../assets/images/nasa-buzz-aldrin-2x.jpg&quot; srcset=&quot;../../assets/images/nasa-buzz-aldrin-1x.jpg 1x, ../../assets/images/nasa-buzz-aldrin-2x.jpg 2x&quot; alt=&quot;Portrait of Lunar Module Pilot Edwin Aldrin&quot;&gt;
+    &lt;figcaption&gt;&lt;cite&gt;Photo: &lt;a href=&quot;https://images.nasa.gov/details-S69-31743&quot; target=&quot;_blank&quot;&gt;Astronaut Edwin E. Aldrin Jr.&lt;/a&gt; from NASA&lt;/cite&gt;&lt;/figcaption&gt;
+    &lt;/figure&gt;
+    &lt;div class=&quot;text&quot;&gt;
+      &lt;h2&gt;Lunar Module Pilot Edwin &amp;#8220;Buzz&amp;#8221; Aldrin&lt;/h2&gt;
+      &lt;p&gt;Edwin E. Aldrin, Jr. (1930- ) was born in Montclair, New Jersey, on 20 January 1930. He attended the U.S. Military Academy at West Point, entered the United States Air Force, and received pilot training in 1951.&lt;/p&gt;
+      &lt;p class=&quot;icon&quot;&gt;&lt;a href=&quot;https://history.nasa.gov/ap11ann/astrobios.htm#Buzz&quot; target=&quot;_blank&quot;&gt;Learn more&lt;span&gt;&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z&quot;/&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre>
+            </figure>
           </div>
         </section>
       </article>
