--- a/organisms/media-grid-blocks/media-grid-blocks.html
+++ b/organisms/media-grid-blocks/media-grid-blocks.html
@@ -36,7 +36,7 @@
       <article>
         <section class="row wide">
           <div class="column">
-            <h1 class="title">Media Grid Block</h1>
+            <h1 class="title">Media Grid Blocks</h1>
             <p>Media grid blocks are great to use for previews of longer content. We like to think of them as a robust table of contents.</p>
           </div>
         </section>
