--- a/molecules/banners/banners.html
+++ b/molecules/banners/banners.html
@@ -65,10 +65,10 @@
             </figure>
             <ol>
               <li>The parent relationship starts with <code style="white-space: normal">&lt;div class=&quot;banner&quot;&gt;</code>.
-              <li>We use the <code>.tall</code> class to set the banner to <code>height: 90vh</code> and the <code>.short</code> class to set the banner to <code>height: 45vh</code>. If you don't include one of these classes, the banner will be only as tall as the content requires.</li>
+              <li>We use the <code>.tall</code> class to set the banner to <code>height: 90vh</code> &mdash; the <code>.short</code> class sets the banner to <code>height: 45vh</code>. If you don't include one of these classes, the banner will be only as tall as the content requires.</li>
               <li>Use either a <code>.left</code> or <code>.right</code> class to control whether the banner's content aligns left or right horizontally (on screens wider than 48rem).</li>
               <li>The <code>.bg-photo</code> class sets up the banner for a background-photo.</li>
-              <li>The <code>.light</code> or <code>.dark</code> class determines the overall tone of the background photo. If the class is set to <code>.light</code> (for a light photo), the content is set to <code>color: $black</code>. If the class is set to <code>.dark</code> (for a dark photo), the content is set to <code>color: $white</code>.</li>
+              <li>The <code>.light</code> or <code>.dark</code> class is used to tell the css the overall tone of the background photo. If the class is set to <code>.light</code> (for a light photo), the content is set to <code>color: $black</code>. If the class is set to <code>.dark</code> (for a dark photo), the content is set to <code>color: $white</code>.</li>
               <li>Next come the background photo alignment options:</li>
               <figure style="padding-top: 0;">
 <pre><code>.center {background-position: center center;}
