--- a/molecules/navigation/navigation.html
+++ b/molecules/navigation/navigation.html
@@ -42,6 +42,23 @@
             <p>According to the <a href="https://a11y-style-guide.com/style-guide/section-navigation.html#kssref-navigation-navigation-basic" target="_blank">A11Y Style Guide</a>, all navigation elements should be inside a <code>&lt;nav&gt;</code> tag. Furthermore, menus should be labeled according to their individual function. The Delta Design System features a <code>&lt;nav&gt;</code> in the <code>&lt;header&gt;</code> and <code>&lt;footer&gt;</code> and uses <code style="white-space: normal;">aria-labelledby="header-navigation"</code> and <code style="white-space: normal;">aria-labelledby="footer-navigation"</code> to provide context and improve accessibility.</p>
           </div>
         </section>
+        <section class="row wide">
+          <div class="column">
+            <figure>
+              <figcaption>html</figcaption>
+<pre><code>&lt;nav class=&quot;column&quot; aria-labelledby=&quot;footer-navigation&quot;&gt;
+  &lt;ul&gt;
+    &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;Overview&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;Atoms&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;Molecules&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;Organisms&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;Style&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;Downloads&lt;/a&gt;&lt;/li&gt;
+  &lt;/ul&gt;
+&lt;/nav&gt;</code></pre>
+            </figure>
+          </div>
+        </section>
       </article>
     </main>
     <footer>
