--- a/organisms/banners/banners.html
+++ b/organisms/banners/banners.html
@@ -37,7 +37,7 @@
         <section class="row wide">
           <div class="column">
             <h1 class="title">Banners</h1>
-            <p>Banners are a key visual molecule in the Delta Design System. We designed banners for maximum flexibility. Here are the options you can control:</p>
+            <p>Banners are a key visual organism in the Delta Design System. We designed banners for maximum flexibility. Here are the options you can control:</p>
             <ul>
               <li>Photo background (if a photo background is wanted; this is an inline setting)</li>
               <li>Overlay color and opacity (this is an inline setting)</li>
