--- a/style/typography/typography.html
+++ b/style/typography/typography.html
@@ -150,6 +150,20 @@
                 <li>A quick brown fox jumps over the lazy dog.</li>
               </ul>
             </figure>
+            <h2>Link Examples</h2>
+            <figure>
+              <figcaption>h1&ndash;h4</figcaption>
+              <p class="header-two"><a href="#!" style="font-weight: normal; text-decoration: none;">A quick brown fox jumps over the lazy dog.</a></p>
+            </figure>
+            <figure>
+              <figcaption>p</figcaption>
+              <p><a href="#!">Read more</a></p>
+            </figure>
+            <figure>
+              <figcaption>p with arrow</figcaption>
+              <p class="icon"><a href="#!">Read more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
+              <p>To use an icon, add a <code>.icon</code> class to your <code>p</code> tag and paste your preferred icon svg code inside a <code>&lt;span&gt;</code>.</p>
+            </figure>
           </div>
         </section>
       </article>
